--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <title>Exprorer</title>
+    <title>Explorer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exprorer is the best website for booking an hotel renting  car or going on tours">
     <meta name="author" content="Viktor Madatyan">
@@ -15,7 +15,7 @@
   <body>
       
           <div class="title">
-              <h1>Exprorer.ca</h1>
+              <h1>Explorer.ca</h1>
           </div>
  
         <div>
@@ -126,7 +126,7 @@
 
         <footer class="foot">
                 <p>Info</p>
-                 <a href="Exprorer.ca">Exprorer.ca</a>.</p>
+                 <a href="Explorer.ca">Explorer.ca</a>.</p>
                  <p> &copy; 2019 Exprorer, inc. All rights reserved.</p>
               </footer>
 
