--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <footer class="foot">
                 <p>Info</p>
                  <a href="Explorer.ca">Explorer.ca</a>.</p>
-                 <p> &copy; 2019 Exprorer, inc. All rights reserved.</p>
+                 <p> &copy; 2019 Explorer, inc. All rights reserved.</p>
               </footer>
 
   </body>
